# QMSrs

./: CHECKLIST.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  PRD.md  README.md  critical_fixes_summary.md
data/: qms.db
src/: api.rs  app.rs  audit.rs  capa.rs  cli.rs  config.rs  database.rs  document.rs  error.rs  lib.rs  logging.rs  main.rs  pdf_report.rs  post_market.rs  risk.rs  security.rs  supplier.rs  supplier_repo.rs  training.rs  training_repo.rs  ui.rs
