[package]
name = "qmsrs"
version = "1.0.0"
edition = "2021"
authors = ["QMS Development Team"]
description = "FDA Compliant Medical Device Quality Management System"
license = "MIT"

[dependencies]
# Core serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID for unique identifiers  
uuid = { version = "1.0", features = ["v4", "serde"] }

# Configuration
toml = "0.5"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.0"

[[bin]]
name = "qmsrs"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true
overflow-checks = true