[package]
name = "qmsrs"
version = "1.0.0"
edition = "2021"
authors = ["QMS Development Team"]
description = "FDA Compliant Medical Device Quality Management System"
license = "MIT"

[dependencies]
# Core serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID for unique identifiers  
uuid = { version = "1.0", features = ["v4", "serde"] }

# Database with connection pool
rusqlite = { version = "0.29", features = ["bundled", "backup"] }
r2d2 = "0.8"
r2d2_sqlite = "0.22"

# TUI Framework (re-adding for complete implementation)
ratatui = "0.23"
crossterm = "0.26"

# Encryption for proper digital signatures
ring = "0.17"
base64 = "0.22"

# Configuration
toml = "0.8"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Tracing for audit logs
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
sha2 = "0.10"
rand = "0.8"

axum = { version = "0.6", features = ["json"] }
hyper = { version = "0.14", features = ["full"] }
tower = "0.4"

[dev-dependencies]
tempfile = "3.0"

[[bin]]
name = "qmsrs"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true
overflow-checks = true